# fifteen_pipeline

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: fifteen_solve.cpp  fifteen_solve.h
test/: CMakeLists.txt  test_fifteen_solve.cpp
